2022-02-14 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>

	* .version,
	  doc/INSTALL.txt,
	  sdcc.spec:
	  Preparations for 4.2.0.

2022-02-14 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>

	* support/regression/tests/bug-3289.c:
	  Test for recently-fixed bug #3289.

2022-02-13 Gabriele Gorla <gorlik@yahoo.com>

	* sdcc/src/mos6502/gen.c:
	  Avoid generating illegal 6502 instructions in a few corner cases.

2022-02-13 Gabriele Gorla <gorlik@yahoo.com>

	* sdcc/src/mos6502/gen.c,
	  sdcc/src/SDCCglue.c:
	  Removed hack that assigned function pointers entry address-1.
	* sdcc/src/mos6502/main.c:
	  Changed default output to ihx.

2022-02-12 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>

	* support/valdiag/Makefile.in:
	  Skip not-built-by-default 65c02 port in valdiag testing.

2022-02-10 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>

	* device/lib/pdk14/__setjmp.s:
	  Fix typo (bug #3318).

2022-02-10 Gabriele Gorla <gorlik@yahoo.com>

	* sdcc/src/mos6502/gen.c,
	  sdcc/src/mos6502/ralloc.c:
	  Fix all warnings.

2022-02-10 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>

	* device/lib/pdk*/__gptrget.s,
	  device/lib/pdk*/__gptrget2.s,
	  device/lib/pdk*/__setjmp.s:
	  Get rid of some warnings by changing old-style pdk io assembler to new style.
	* tests/bug-2912.c,
	  tests/bug-3102.c:
	  Disable warning about intentionally unused parameter in test.
	* sdccconf_in.h:
	  Regenerate file via autoheader, fixes bug #3316.

2022-02-10 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCsymt.c (leaveBlockScope): fix bug #3289

2022-02-09 Gabriele Gorla <gorlik@yahoo.com>

	* sdcc/src/mos6502/gen.c:
	  General code cleanup.
	* sdcc/src/SDCCpeeph.c:
	  Fix bug 3291.

2022-02-09 Gabriele Gorla <gorlik@yahoo.com>

	* sdcc/src/mos6502/gen.c:
	  Additional improvements in genPointerGet/genPointerSet.

2022-02-08 Gabriele Gorla <gorlik@yahoo.com>

	* sdcc/src/mos6502/gen.c: