@@ -3,6 +3,7 @@
 
    Copyright (C) 1999, Sandeep Dutta . sandeep.dutta@usa.net
    Copyright (C) 2020, Sergey Belyashov sergey.belyashov@gmail.com
+   Copyright (C) 2022, Sebastian 'basxto' Riedel
    mcs51 assembler by Frieder Ferlemann (2007)
 
    This library is free software; you can redistribute it and/or modify it
@@ -28,6 +29,7 @@
    might be covered by the GNU General Public License.
 -------------------------------------------------------------------------*/
 
+#include <stdlib.h>
 #include <string.h>
 
 #undef memset /* Avoid conflict with builtin memset() in Z80 and some related ports */
@@ -122,20 +124,29 @@ __naked
   __endasm;
 }
 #elif !defined (_SDCC_NO_ASM_LIB_FUNCS) && defined(__SDCC_sm83)
-#ifdef __SDCC_BROKEN_STRING_FUNCTIONS      
-#error Unimplemented broken string function
-#endif  
 __naked
 {
-	(void)s;
-	(void)c;
-	(void)n;
+	(void)s;//de
+	(void)c;//bc or for broken string function in a
+	(void)n;//stack+2, stack+3
 __asm
-	ld	a, c
-	ldhl	sp,	#2
-	ld	c, (hl)
-	inc	hl
+	ldhl	sp,	#3
+__endasm;
+#ifdef __SDCC_BROKEN_STRING_FUNCTIONS
+__asm
 	ld	b, (hl)
+	dec	hl
+__endasm;
+#else
+__asm
+
+	ld	a, (hl-)
+	ld	b, a
+	ld	a, c
+__endasm;
+#endif  
+__asm
+	ld	c, (hl)
 	ld	l, e
 	ld	h, d
 	inc	c
